# HelldiversAutolog

./: README.md  pyproject.toml
assetloader/: __init__.py
bot/: TauCetiBot.py  bot_setup.py  config_gen.py
cogs/: HelldiversCog.py  HelldiversCogAutoLog.py  HelldiversMathCog.py  SetupCog.py
cogs/HD2/: GameStatus.py
utility/: mytemplatemessages.py
