[project]
name = "nikkibot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "discord-py>=2.6.3",
    #"google-api-python-client>=2.181.0",
    #"gptfunctionutil>=0.3.8.0",
    #"htmldate>=1.9.3",
    #"httpx>=0.28.1",
    #"javascriptasync>=0.2.2.8",
    "hd2api-py",
    "keyring>=25.6.0",
    #"lancedb>=0.25.0",
    #"langchain>=0.3.27",
    #"langchain-community>=0.3.29",
    #"langchain-core>=0.3.75",
    #"langchain-huggingface>=0.3.1",
    #"langchain-openai>=0.3.32",
    "keyring-pass>=0.9.3",
    "keyrings-alt>=5.0.2",
    "lxml>=5.4.0",
    "markdown>=3.9",
    # "markitdown>=0.1.3",
    "matplotlib>=3.10.6",
    #"mutagen>=1.47.0",
    #"nltk>=3.9.1",
    "numpy>=2.3.2",
    #"openai>=1.106.1",
    "pandas>=2.3.2",
    "perlin-noise>=1.14",
    #"pillow>=11.3.0",
    #"playwright>=1.55.0",
    "pydantic>=2.11.7",
    "pynacl>=1.5.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "sqlalchemy>=2.0.43",
    #"sqlitedict>=2.1.0",
    #"tiktoken>=0.11.0",
    #"tokenizers>=0.22.0",
    #"tqdm>=4.67.1",
    #"transformers>=4.56.1",
    #"yt-dlp>=2025.9.5",
]

[tool.uv.sources]
hd2api-py = { git = "https://github.com/CrosswaveOmega/hd2api.py" }

